[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures ="*"
tokio = {version = "1.0", features = ["full"]}
yahoo_finance_api = {version = "0.2"}
chrono = "*"
rocket = "0.5.0-rc.1"

